Updated from https://github.com/clarin-eric/clarin-drupal-bootstrap-theme/commit/0cc687b Last commit message: Fix tags on tablet size

--- a/css/style.css
+++ b/css/style.css
@@ -3136,7 +3136,7 @@ a.news-more-link:focus {
     padding: 0 1.25rem 1.875rem;
   }
 }
-@media (min-width: 62rem) {
+@media (min-width: 48rem) {
   .view-sharing-knowledge .views-row,
   .grid-container-view .views-row {
     display: -webkit-box;
